2003-03-07  Jean Delvare  <khali@linux-fr.org>

	Fixed IPMI device information (DMI case 38). Thanks to Richard Sharpe
	for pointing the bugs out.

	* dmidecode.c: Fixed IPMI interface type being shifted by one.
	* dmidecode.c: Fixed NV storage device being improperly displayed.
	* dmidecode.c: Reword IPMI specification revision into specification
	version, as suggested in the IPMI specification itself.
	* dmidecode.c: Added a reference to the IPMI specification.
	* dmidecode.c: Show I2C address as hexadecimal.
	* dmidecode.c: Base address is a QWORD, not DWORD.
	* dmidecode.c: Decode some extra fields according to the IPMI
	specification.

2003-03-06  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c, biosdecode.c: Moved all changelog entries to CHANGELOG.
	* CHANGELOG: New. Format inspired by Heroes' ChangeLog file.
	* dmidecode.c, biosdecode.c, Makefile: Updated copyright years.
	* dmidecode.c, biosdecode.c, Makefile: Moved version definition to
	version.h. Updated dependencies accordingly.
	* version.h: New.

2002-10-21  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Changed supported log type descriptors display.
	* dmidecode.c: Code optimization in event log status.
	* dmidecode.c: Remove extra newline in voltage probe accuracy.
	* dmidecode.c: Display "OEM-specific" if type is 128 or more.
	* dmidecode.c: Do not display Strings on dump if there are no strings.
	* dmidecode.c: Add ASCII-filtering to dmi_string.
	* dmidecode.c: Convert all dates to ISO 8601.

2002-10-18  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Complete rewrite.
	* dmidecode.c: Now complies with SMBIOS specification 2.3.3.
	* dmidecode.c: Moved all non-DMI stuff to biosdecode.c.
	* biosdecode.c: New.

2002-10-15  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix bad index in DMI case 27 (cooling device).

2002-10-14  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Fix typo in dmi_memory_array_location.
	* dmidecode.c: Replace Kbyte by kB in DMI case 16.